# zabmap

.github/workflows/: deploy_api.yml  deploy_frontend.yml
api/: pyproject.toml
api/src/zabmap_api/: api.py  db.py  main.py  scheduler.py
gui/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gui/src/: App.vue  index.css  main.js
gui/src/components/: CustomModal.vue  FilesystemsList.vue  HostsList.vue  LastUpdated.vue  Loader.vue  PropertiesView.vue  TooltipLegend.vue  TreeView.vue
gui/src/components/disabled/: RemotePropertiesView.vue
gui/src/config/: filesystemConfig.js
gui/src/router/: index.js
gui/src/views/: FilesystemsView.vue  HostsView.vue  PropertiesView.vue
